# artifacts/api-server/src/routes/index.ts
@@ -7,6 +7,7 @@ import expensesRouter from "./expenses";
 import billingsRouter from "./billings";
 import billingsPdfRouter from "./billings-pdf";
 import dashboardRouter from "./dashboard";
+import payablesRouter from "./payables";
 
 const router: IRouter = Router();
 
@@ -18,5 +19,6 @@ router.use("/expenses", expensesRouter);
 router.use("/billings", billingsRouter);
 router.use("/billings", billingsPdfRouter);
 router.use("/dashboard", dashboardRouter);
+router.use("/payables", payablesRouter);
 
 export default router;
